Refactor HTML structure, add profile page, and enhance post management features
- Updated index.html to use proper DOCTYPE and improved meta tags.
- Introduced a new Profile page for user profiles.
- Added PostMedia and AdminMedia components for better media handling in posts.
- Enhanced PostCard component to include user authentication context.
- Implemented comment functionality in PostDetail page.
- Updated API service to support new endpoints for comments and user profiles.
- Improved post creation and editing features in the admin panel, including cover image uploads.
- Added loading states and error handling for better user experience.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog - Descubra histórias que inspiram</title>
-    <meta name="description" content="Explore artigos sobre tecnologia, design e desenvolvimento. Aprenda, cresça e se inspire com nosso blog." />
+    <meta
+      name="description"
+      content="Explore artigos sobre tecnologia, design e desenvolvimento. Aprenda, cresça e se inspire com nosso blog."
+    />
     <meta name="author" content="Blog" />
 
-    <meta property="og:title" content="Blog - Descubra histórias que inspiram" />
-    <meta property="og:description" content="Explore artigos sobre tecnologia, design e desenvolvimento." />
+    <meta
+      property="og:title"
+      content="Blog - Descubra histórias que inspiram"
+    />
+    <meta
+      property="og:description"
+      content="Explore artigos sobre tecnologia, design e desenvolvimento."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="../logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Blog - Descubra histórias que inspiram" />
-    <meta name="twitter:description" content="Explore artigos sobre tecnologia, design e desenvolvimento." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta
+      name="twitter:title"
+      content="Blog - Descubra histórias que inspiram"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore artigos sobre tecnologia, design e desenvolvimento."
+    />
+    <meta name="twitter:image" content="../logo.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+
     <link rel="canonical" href="/" />
   </head>
 
